adjusted styles to ensure styles apply into overflow content, removed dividers as suggested (their width can be adjusted, but that requires css calc magic), moved hover helpers over the labels

--- a/src/assets/styles/_measure-table-row.scss
+++ b/src/assets/styles/_measure-table-row.scss
@@ -9,7 +9,6 @@ $block-class: 'measure-table-row';
         }
 
         & &__row-section {
-            justify-content: space-evenly;
             align-items: center;
             display: flex;
             width: 100%;
