--- a/src/assets/styles/_patient-table-row.scss
+++ b/src/assets/styles/_patient-table-row.scss
@@ -4,19 +4,17 @@ $block-class: 'patient-table-row';
 
 @at-root {
     .#{$block-class} {
-
+        background-color: inherit;
         & &__divider {
             background-color: $blue-grey-lighten-3;
         }
 
         & &__row-section {
-            justify-content: space-evenly;
             align-items: center;
             display: flex;
             width: 100%;
-            padding: 0.2rem;
             flex-wrap: nowrap;
-            // border-bottom: 1px solid $blue-grey-lighten-3;
+            background-color: inherit;
 
             &--wide {
                 justify-content: flex-start;
@@ -26,10 +24,13 @@ $block-class: 'patient-table-row';
         & &__data-align {
             display: flex;
             justify-content: center;
-            padding: 1rem;
+            padding: 0.5rem;
             min-width: 10%;
-            margin: auto;
             word-wrap: break-word;
+            background-color: inherit;
+            margin: 0;
+            height: 6rem;
+            align-items: center;
 
             &--smaller {
                 flex-basis: 5%;
